add html for game area in index.html file

--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
     </a>
 
     <div class="game-area">
+        <div class="username-div" >
+            <label for="username">Enter Username</label><br>
+            <input type="text" id="username" required>
+        </div>
+
+        <div class="play">
+            <a href="#" class="button">Play Quiz!</a>
+        </div>
 
     </div>
 
     <div class="scoreboard-area">
-        <a href="#" id="scores" class="buttons" >Score Board</a>
+        <a href="#" id="scores" >Score Board</a>
 
     </div>
 
