--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="play">
-            <a href="#" class="button">Play Quiz!</a>
+            <a href="#" class="button">Play Quiz! <i class="fa-solid fa-circle-play"></i></a>
         </div>
 
     </div>
@@ -36,7 +36,7 @@
         <a href="#" id="scores" >Score Board</a>
 
     </div>
-
+    <script src="https://kit.fontawesome.com/a8dca34502.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
