add css styling for logo and heading in stylesheet

--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    
+
+
     <!--Favicon icon link-->
     <link rel="icon" href="assets/favicon/favicon.ico">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <a>
-        <h1 class="quiz-heading">
-            <img class="logo-image" src="assets/images/logo-image.webp" alt="logo"> JavaScript Vs Python
-        </h1>
-        <span>Know the difference!</span>
-    </a>
+    <div class="heading-area">
+        <a>
+            <img class="logo-image" src="assets/images/logo-image.webp" alt="logo"> 
+            <h1 class="quiz-heading">
+                JavaScript Vs Python
+            </h1>
+            <span id="logo-text">Know the difference!</span>
+        </a>
+    </div>
 
     <div class="game-area">
-        <div class="username-div" >
+        <div class="username-div">
             <label for="username">Enter Username</label><br>
             <input type="text" id="username" required>
         </div>
@@ -33,10 +38,11 @@
     </div>
 
     <div class="scoreboard-area">
-        <a href="#" id="scores" >Score Board</a>
+        <a href="#" id="scores">Score Board</a>
 
     </div>
     <script src="https://kit.fontawesome.com/a8dca34502.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
