add css styles to score container to display as flex and style the h2 heading in questions.html

--- a/questions.html
+++ b/questions.html
@@ -26,14 +26,14 @@
     </div>
 
     <div class="game-area">
-        <div>
-            <p>Q NO: <span id="question-number">1</span></p>
-            <p>Time remaining: <br> <span id="timer">3:00</span> </p>
+        <div class="score-container">
+            <p>Q No.: <span id="question-number">1</span></p>
+            <p>Timer:<span id="timer">3:00</span> </p>
             <p>Score: <span id="your-score">0</span></p>
-            <p>Q remaining: <br><span id="question-remaining">30</span></p>
+            <p>Q left: <span id="question-remaining">30</span></p>
         </div>
-        <div>
-            <h2 id="questions"></h2>
+        <div class="choose-container">
+            <h2 id="questions"> A question</h2>
             <div>
                 <button>Python</button>
                 <button>Java Script</button>
