--- a/questions.html
+++ b/questions.html
@@ -34,7 +34,7 @@
         </div>
         <div class="choose-container">
             <h2 id="questions"> A question</h2>
-            <div>
+            <div class="answer-btn">
                 <button>Python</button>
                 <button>Java Script</button>
             </div>
