add information on how to play game in home page, and create variables for home page in script.js

--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
     </header>
 
     <section id="home-page">
+        <div>
+            <p><i class="fa-solid fa-magnifying-glass"></i>Are you a newbie to Javascript or Python? Test your knowledge with this simple quiz! <br>Start the game by simply enter an username and press Play! </p>
+        </div>
         <div class="username-div">
             <label for="username">Enter Username</label><br>
-            <input type="text" id="username" required>
+            <input type="text" name ="username" id="username" required>
         </div>
 
-        <div class="play">
-            <a href="questions.html" class="button">Play Quiz!   <i class="fa-solid fa-circle-play"></i></a>
-        </div>
+        <button class="play" id="start-game">
+            <p class="button">  Play Quiz!   <i class="fa-solid fa-circle-play"></i></p>
+        </button>
 
     </section>
 
