add function in script.js to validate username

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <div class="username-div">
             <label for="username">Enter Username</label><br>
             <input type="text" name ="username" id="username" required>
+            <div id="validation"></div>
         </div>
 
-        <button class="play" id="start-game">
+        <button class="play" id="start-game" onclick="validateMessage()">
             <p class="button">  Play Quiz!   <i class="fa-solid fa-circle-play"></i></p>
         </button>
 
