add function to start game in script.js

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </section>
 
-    <section id="game-page" class="display">
+    <section id="game-page" >
         <div class="score-container">
             <p>Q No.: <span id="question-number">1</span></p>
             <p>Timer:<span id="timer">3:00</span> </p>
@@ -57,12 +57,13 @@
         </div>
     </section>
 
-    <section id="scoreboard-area" class="display">
+    <section id="scoreboard-area" >
         <a href="#" id="scores">Score Board</a>
 
     </section>
 
     <script src="https://kit.fontawesome.com/a8dca34502.js" crossorigin="anonymous"></script>
+    <script src="assets/js/questions.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
