--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 
     <section id="game-page" >
         <div class="score-container">
-            <p>Q No.: <span id="question-number">1</span></p>
-            <p>Timer:<span id="timer">3:00</span> </p>
-            <p>Score: <span id="your-score">0</span></p>
-            <p>Q left: <span id="question-remaining">30</span></p>
+            <p>Q No.: <span id="question-number"></span></p>
+            <p>Timer:<span id="timer"></span> </p>
+            <p>Score: <span id="your-score"></span></p>
+            <p>Q left: <span id="question-remaining"></span></p>
         </div>
         <div class="choose-container">
             <h2 id="questions"> A question</h2>
             <div class="answer-btn">
-                <button>Python</button>
-                <button>Java Script</button>
+                <button id="python">Python</button>
+                <button id="javascript">Java Script</button>
             </div>
         </div>
     </section>
@@ -63,7 +63,7 @@
     </section>
 
     <script src="https://kit.fontawesome.com/a8dca34502.js" crossorigin="anonymous"></script>
-    <script src="assets/js/questions.js"></script>
+    <script src="assets/js/question.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
