add event listeners and function for answer buttons in script.js

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="choose-container">
             <h2 id="questions"> A question</h2>
             <div class="answer-btn">
-                <button id="python">Python</button>
-                <button id="javascript">Java Script</button>
+                <button id="python" class="answer">Python</button>
+                <button id="javascript" class="answer">Java Script</button>
             </div>
         </div>
     </section>
