create timer for 40 seconds using setInterval method

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="game-page" >
         <div class="score-container">
             <p>Q No.: <span id="question-number"></span></p>
-            <p>Timer:<span id="timer"></span> </p>
+            <p>Time Left:<span id="timer"></span> seconds</p>
             <p>Score: <span id="your-score"></span></p>
             <p>Q left: <span id="question-remaining"></span></p>
         </div>
