create a gameover section in html that shows option to play again or view scores

--- a/index.html
+++ b/index.html
@@ -57,8 +57,17 @@
         </div>
     </section>
 
-    <section id="scoreboard-area" >
-        <a href="#" id="scores">Score Board</a>
+    <section id="gameover-area" >
+        <!--<a href="#" id="scores">Score Board</a>-->
+        <div id="no-time-left"></div>
+        <div>
+            <h2>Game Over!</h2>
+            <p>Please select an option below</p>
+        </div>
+        <div>
+            <button>Play Again</button>
+            <button>View Score</button>
+        </div>
 
     </section>
 
