add an empty paragraph in index.html to show score after user plays game

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <div id="no-time-left"></div>
         <div>
             <h2>Game Over!</h2>
-            <p>Please select an option below</p>
+            <p id="show-score"></p>
         </div>
         <div>
             <button>Play Again</button>
-            <button>View Score</button>
+            
         </div>
 
     </section>
