add function in js to show scores and rate performance which is called after game is over

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <div>
             <h2>Game Over!</h2>
             <p id="show-score"></p>
+            <p id="performance"></p>
         </div>
         <div>
             <button>Play Again</button>
