changed sloggan to parapgraph element to center text in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="quiz-heading">
                  JavaScript Vs Python
             </h1>
-            <span id="logo-text">Know the difference!</span>
+            <p id="logo-text">Know the difference!</p>
         </a>
     </header>
 
