--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p id="performance"></p>
         </div>
         <div>
-            <button>Play Again</button>
+            <button onclick="window.location.reload()">Play Again</button>
             
         </div>
 
