add styling to description div in html

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     </header>
 
     <section id="home-page">
-        <div>
-            <p><i class="fa-solid fa-magnifying-glass"></i>Are you a newbie to Javascript 
-                or Python? Test your knowledge with this simple quiz!<br>
+        <div id="description">
+            <h2 id="home-question"><i class="fa-solid fa-magnifying-glass"></i> Are you a newbie to Javascript 
+                or Python? 
+            </h2>
+            <p>
+                Test your knowledge with this simple quiz!
                 <a id="how" onclick="howtoPlay()"><i class="fa-regular fa-circle-question"></i></a>
                 <span id ="how-to-play">Start the game by simply entering an username and pressing Play! </span>
              </p>
