change font style and size of validation messages in js file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
              </p>
         </div>
         <div class="username-div">
-            <label for="username">Enter Username</label><br>
+            <label for="username">ENTER USERNAME:</label><br>
             <input type="text" name ="username" id="username" required>
             <p id="validation"></p>
 
