--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
     <section id="game-page" >
         <div class="score-container">
-            <p>Q No.: <span id="question-number"></span></p>
-            <p>Time Left:<span id="timer"></span> seconds</p>
+            <p>Question<br>No.:<span id="question-number"></span></p>
+            <p>Time Left:<br><span id="timer"></span> secs</p>
             <p>Score: <span id="your-score"></span></p>
-            <p>Q left: <span id="question-remaining"></span></p>
+            <p>Questions<br>left:<span id="question-remaining"></span></p>
         </div>
         <div class="choose-container">
             <h2 id="questions"> A question</h2>
