change font size of answer options and change borderstyle of score container

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
     <section id="game-page" >
         <div class="score-container">
-            <p>Question<br>No.:<span id="question-number"></span></p>
-            <p>Time Left:<br><span id="timer"></span> secs</p>
-            <p>Score: <span id="your-score"></span></p>
+            <p>Question<br>No:<span id="question-number"></span></p>
+            <p>Timer:<br><span id="timer"></span> secs</p>
+            <p>Score:<br> <span id="your-score"></span></p>
             <p>Questions<br>left:<span id="question-remaining"></span></p>
         </div>
         <div class="choose-container">
