add background color, border and color to gameover heading in last section of index.html

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
     <section id="gameover-area" >
         <!--<a href="#" id="scores">Score Board</a>-->
-        <div id="no-time-left"></div>
+        <div class="gameover" id="no-time-left"></div>
         <div>
-            <h2>Game Over!</h2>
-            <p id="show-score"></p>
-            <p id="performance"></p>
+            <h2 id="gameover-heading">Game Over!</h2>
+            <p class="gameover" id="show-score"></p>
+            <p class="gameover" id="performance"></p>
         </div>
         <div>
             <button onclick="window.location.reload()">Play Again</button>
