change css style of play again button in gameover section in index.html

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     <section id="gameover-area" >
         <!--<a href="#" id="scores">Score Board</a>-->
         <div class="gameover" id="no-time-left"></div>
-        <div>
+        <div id="results">
             <h2 id="gameover-heading">Game Over!</h2>
             <p class="gameover" id="show-score"></p>
             <p class="gameover" id="performance"></p>
         </div>
         <div>
-            <button onclick="window.location.reload()">Play Again</button>
+            <button id="playagain" onclick="window.location.reload()">Play Again</button>
             
         </div>
 
