add in icon for play again button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p class="gameover" id="performance"></p>
         </div>
         <div>
-            <button id="playagain" onclick="window.location.reload()">Play Again</button>
+            <button id="playagain" onclick="window.location.reload()">Play Again <i class="fa-solid fa-rotate-right"></i></button>
             
         </div>
 
