change background color and style of score container

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
     <section id="game-page" >
         <div class="score-container">
-            <p>Question<br>No:<span id="question-number"></span></p>
-            <p>Timer:<br><span id="timer"></span> secs</p>
-            <p>Score:<br> <span id="your-score"></span></p>
-            <p>Questions<br>left:<span id="question-remaining"></span></p>
+            <p>Question No:<strong><span id="question-number"></span></strong></p>
+            <p>Timer: <strong><span id="timer"></span></strong> secs</p>
+            <p>Score: <strong><span id="your-score"></span>/10</strong></p>
+            <p>Questions left:<strong><span id="question-remaining"></span></strong></p>
         </div>
         <div class="choose-container">
             <h2 id="questions"> A question</h2>
