--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>
                 Test your knowledge with this simple quiz!
                 <a id="how" onclick="howtoPlay()"><i class="fa-regular fa-circle-question"></i></a>
-                <span id ="how-to-play">Start the game by simply entering an username and pressing Play! </span>
+                
              </p>
         </div>
         <div class="username-div">
@@ -44,6 +44,14 @@
                 <p class="button">  Play Quiz!   <i class="fa-solid fa-circle-play"></i></p>
             </button>
         </div>
+    </section>
+    <section id ="how-to-play">
+        <div>
+            <h2>How to Play</h2>
+            <p>Start the game by simply entering an username and pressing Play! </p>
+            <button onclick="window.location.reload()"> Go Back </button>
+        </div>
+
     </section>
 
     <section id="game-page" >
