--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div>
             <h2>How to Play</h2>
             <p>Start the game by simply entering an username and pressing Play! </p>
-            <button onclick="window.location.reload()"> Go Back </button>
+            <button id = "go-back" onclick="window.location.reload()"> Go Back </button>
         </div>
 
     </section>
