change padding of score-container p

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
     <section id="game-page" >
         <div class="score-container">
-            <p>Question No:<strong><span id="question-number"></span></strong></p>
+            <p>Qn:<strong><span id="question-number"></span></strong></p>
             <p>Timer: <strong><span id="timer"></span></strong> secs</p>
             <p>Score: <strong><span id="your-score"></span>/10</strong></p>
-            <p>Questions left:<strong><span id="question-remaining"></span></strong></p>
+            <p>Qns left:<strong><span id="question-remaining"></span></strong></p>
         </div>
         <div class="choose-container">
             <h2 id="questions"> A question</h2>
